[tool.poetry]
name = "elm-time2-zone"
version = "0.1.0"
description = ""
authors = ["pd9333 <pd9333@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.6.1"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
