[project]
name = ""
version = ""
description = ""
authors = [
    {name = "pd9333", email = "pd9333@gmail.com"},
]
dependencies = [
    "typer>=0.7.0",
    "jinja2>=3.1.2",
]
requires-python = ">=3.10"
license = {text = "BSD 3-Clause"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
